# test-ocaml-ci-docker

./: README.md  dune  dune-project  find_clones.py  lib1.opam
.github/workflows/: PR.yml  PrPost.yml  master.yml
Lambda/: Makefile  REPL.ml  dune  dune-project
Lambda/QCtest/: QCTests.ml  QCTests.mli  dune
Lambda/demos/: demoAO.ml  demoNO.ml  demoParse.ml  dune
Lambda/lib/: Pprintast.ml  Printast.ml  ast.mli  dune  interpret.ml  interpret.mli  lambda.ml  lambda.mli  parser.ml  parser.mli  tests.ml  tests.mli  utils.ml  utils.mli
docs/Lambda/Lambda/Lambda_lib/Ast/: index.html
docs/Lambda/Lambda/Lambda_lib/Interpret/: index.html
docs/Lambda/Lambda/Lambda_lib/Interpret/Interpret/: index.html
docs/Lambda/Lambda/Lambda_lib/Interpret/Interpret/argument-1-M/: index.html
docs/Lambda/Lambda/Lambda_lib/Lambda/: index.html
docs/Lambda/Lambda/Lambda_lib/Parser/: index.html
docs/Lambda/Lambda/Lambda_lib/Pprintast/: index.html
docs/Lambda/Lambda/Lambda_lib/Tests/: index.html
docs/Lambda/Lambda/Lambda_lib/Utils/: index.html
docs/Lambda/Lambda/Lambda_lib/Utils/module-type-MONAD_FAIL/: index.html
