; Copyright 2021-2022, Kakadu and contributors
; SPDX-License-Identifier: LGPL-3.0-or-later

(library
 (name lambda_lib)
 (public_name Lambda.Lib)
 (modules Ast Lambda Interpret Parser Printast Pprintast utils Tests)
 (modules_without_implementation ast)
 (libraries base angstrom)
 (preprocess
  (pps ppx_expect ppx_deriving.show))
 (inline_tests))
